Use correct styles link after setup